Push for M3 demonstration